bluejay-validator/tests/snapshots/executable_integration_test__error@required_arguments.graphql.snap
---
source: bluejay-validator/tests/executable_integration_test.rs
expression: formatted_errors
input_file: bluejay-validator/tests/test_data/executable/error/required_arguments.graphql
---
Error: Field `nonNullBooleanArgField` missing argument(s): nonNullBooleanArg
   ╭─[<unknown>:3:5]
   │
 3 │     nonNullBooleanArgField
   │     ───────────┬──────────  
   │                ╰──────────── Missing argument(s): nonNullBooleanArg
───╯

Error: Field `nonNullBooleanArgField` missing argument(s): nonNullBooleanArg
   ╭─[<unknown>:9:5]
   │
 9 │     nonNullBooleanArgField(nonNullBooleanArg: null)
   │     ───────────────────────┬──────────┬────────────  
   │                            ╰───────────────────────── Missing argument(s): nonNullBooleanArg
   │                                       │              
   │                                       ╰────────────── `null` value provided for required argument
───╯

